[package]
name = "stylus-policies"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "FortiLayer SpendingLimitPolicy — Arbitrum Stylus (Rust)"

[dependencies]
stylus-sdk = "0.10.0"
alloy-primitives = "1.3"
alloy-sol-types = "1.3"
mini-alloc = "0.4.2"

[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] }
ethers = "2.0"
eyre = "0.6"

[features]
export-abi = ["stylus-sdk/export-abi"]

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"
